拆分EventListener 增加游戏结束后自动重启 现在是硬编码30秒